implemented frag ops erros

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-android-extensions'
 
 }
 
@@ -22,6 +23,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 
     buildTypes {
@@ -88,6 +90,12 @@ dependencies {
      * LiveData
      */
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    /**
+     * recyclerview
+     */
+//    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+//    implementation 'androidx.annotation:annotation:1.0.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
