--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     /**
-     * recyclerview
+     * Shimmer
      */
-//    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-//    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.todkars:shimmer-recyclerview:0.4.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
