--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
-    androidGradlePluginVersion = '3.4.1'
-    kotlinVersion = '1.3.41'
-    androidXVersion = '1.2.0'
-    androidXAppCompatVersion = '1.1.0'
-    constraintLayoutVersion = '1.1.3'
-    junitVersion = '4.12'
-    testRunnerVersion = '1.2.0'
-    espressoVersion = '3.2.0'
-    navigationVersion = '2.2.2'
-    materialVersion = '1.1.0'
-    rxjavaVersion = '2.2.9'
-    rxandroidVersion = '2.1.1'
-    rxbindingVersion = '3.0.0-alpha2'
-    mobiusVersion = '1.2.2'
-    daggerVersion = '2.23.1'
-    lifecycleVersion = '2.2.0'
-    googleServicesVeersion = '4.3.3'
-    okhttpVersion = '3.11.0'
     retrofitVersion = '2.9.0'
     moshiVersion = '1.9.3'
-    rulesVersion = '1.2.0'
-    fragmentVersion = '1.1.0'
     koinVersion = "2.0.1"
     coroutinesVersion = "1.3.2"
-    testingVersion = '1.2.0'
-    mockWebServerVersion = '4.2.1'
-    ioMockVersion = '1.8.7'
-    roomVersion = '2.2.5'
-    glideToVectorYouVersion = 'v2.0.0'
-    threetenabpVersion = '1.2.4'
-    dataBindingVersion = '3.3.1'
-    dataBindingValidator = '2.0.0'
-    materialAboutVersion = '0.2.3'
-    espressoIntentsVersion = '3.1.0'
-    reactiveNetworkVersion = '3.0.8-rx2'
-    analyticsVersion = '17.4.2'
-    crashlyticsVersion = '17.0.0'
-    crashlyticsVersionGradle = '2.1.1'
-    firebasePerVersion = '19.0.7'
-    firebasePerfPluginVersion = '1.3.1'
+    navigationVersion = "2.3.4"
+    lifecycleVersion = "2.2.0"
+    facebookShimmerVersion = "0.5.0"
+    shimmerRecycleviewVersion = "0.4.0"
+    coreKtxVersion = "1.3.2"
+    appcompatVersion = "1.2.0"
+    materialVersion = "1.3.0"
+    constraintlayoutVersion = "2.0.4"
+    legacySupportV4Version = "1.0.0"
+    jUnitVersion = "4.+"
+    jUnitExtVersion = "1.1.2"
+    espressoCoreVersion = "3.3.0"
 }
 
 buildscript {
