--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
      */
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+
+
     /**
      * Dependency Injection
      */
