--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,33 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "androidx.legacy:legacy-support-v4:$legacySupportV4Version"
 
+    def retrofit_version = "2.6.2"
+    def mockk_version = "1.9"
+    def espresso_version = "3.2.0"
+    def junit_version = "4.12"
+    def koin_version = "2.0.1"
+    def arch_core_version = "2.1.0"
+    def androidx_test_version = "1.2.0"
+    def androidx_core_version = "1.0.2"
+    def airshipVersion = "13.2.1"
+    def coroutines_test_version = "1.3.5"
+
+    /**
+     * Automated tests
+     */
+    testImplementation "androidx.arch.core:core-testing:$arch_core_version"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "androidx.test:core:$androidx_test_version"
+    // Core library - Robolectric environment
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.koin:koin-test:$koin_version"
+    testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0") {
+        exclude group: 'org.mockito', module: 'mockito-core'
+    }
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test_version"
+
+
     /**
      * Tests
      */
