--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ ext {
     jUnitExtVersion = "1.1.2"
     espressoCoreVersion = "3.3.0"
     okhttpVersion = '3.11.0'
+    archCoreVersion = "2.1.0"
+    coroutinesTestVersion = "1.3.5"
+    mockkVersion = "1.9"
+    androidxTestVersion = "1.2.0"
+    androidxCoreVersion = "1.0.2"
+
 }
 
 buildscript {
