--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext {
     rulesVersion = "1.3.0-alpha03"
     espressoVersion = "3.3.0-alpha03"
     robolectricVersion = "4.3.1"
+    espressoVersion = "3.2.0"
 
 }
 
